--- a/Css/sign-in.css
+++ b/Css/sign-in.css
@@ -90,7 +90,7 @@ nav {
     display: flex;
     align-items: center;
     text-transform: capitalize;
-
+    margin-bottom: 20px;
     color: #FFFFFF;
 }
 
