--- a/Css/artist.page.css
+++ b/Css/artist.page.css
@@ -11,19 +11,6 @@
 }
 
 
-header {
-    padding: 0 15px;
-}
-
-.box-1-wrapper,
-.box-2-wrapper,
-.box-3-wrapper,
-.box-4-wrapper,
-.box-5-wrapper,
-.box-7-wrapper,
-.box-8-wrapper,
-
-
 .container {
     max-width: 1280px;
     width: 100%;
@@ -397,12 +384,12 @@ nav {
     gap: 30px;
     padding: 0 10px;
     margin-bottom: 60px;
+    position: relative;
 }
 
 .card-col {
     max-width: 410px;
     width: 100%;
-    height: 700px;
     background: #2B2B2B;
     border-radius: 20px;
     cursor: pointer;
@@ -699,7 +686,7 @@ footer p {
     }
 
     .pc,
-    .for-mobile {
+    .for-mobile,.nav-pc {
         display: none !important;
     }
 
@@ -827,11 +814,16 @@ footer p {
     }
 
 
+
     .nav-pc {
         display: flex !important;
         width: 100%;
         justify-content: space-between;
+        padding: 0 20px;
         align-items: center;
+        position: fixed;
+        z-index: 2;
+        background-color: #2B2B2B;
     }
 
     .desktop-menu {
