--- a/Css/connect.a.vallet.css
+++ b/Css/connect.a.vallet.css
@@ -9,9 +9,7 @@
     display: none;
 }
 
-header {
-    padding: 0 15px;
-}
+
 
 .box-1-wrapper,
 .box-2-wrapper,
@@ -447,6 +445,10 @@ footer p {
         width: 100%;
         justify-content: space-between;
         align-items: center;
+        position: fixed;
+        z-index: 22;
+        padding:0 20px;
+        background-color: #2B2B2B;
     }
 
     .desktop-menu {
